--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/assets/css/main.css" />
     <link rel="stylesheet" href="/assets/css/page.css" />
     <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="http://jamesdools.github.io/overrides.css">
+    <link rel="stylesheet" href="./overrides.css">
     <noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
   </head>
 
