--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <footer>
               <ul class="icons">
-                <li><a href="mailto:jamesdooleys@outlook.com" class="fa-envelope-o">Email</a></li>
+                <li><a href="mailto:jamesdooley@outlook.com" class="fa-envelope-o">Email</a></li>
                 <li><a href="https://www.linkedin.com/in/jamesdooley8" class="fa-linkedin">Linkedin</a></li>
                 <li><a href="https://wwww.github.com/jamesdools" class="fa-github">GitHub</a></li>
                 <li><a href="https://www.instagram.com/jamesdools" class="fa-instagram">Instagram</a></li>
